--- a/index.html
+++ b/index.html
@@ -5,21 +5,38 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com" />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Coiny&family=Roboto&family=Sono:wght@400;600;700&display=swap"
+      rel="stylesheet" />
+
+    <link
+      rel="stylesheet"
+      href="style.css" />
     <title>Today I Learned!</title>
   </head>
 
   <body>
-    <header>
-      <img
-        src="logo.png"
-        alt="Today I Learned Logo"
-        height="68"
-        width="68" />
-      <h1>Today I Learned</h1>
+    <header class="header">
+      <div class="logo">
+        <img
+          src="logo.png"
+          alt="Today I Learned Logo"
+          height="68"
+          width="68" />
+        <h1>Today I Learned</h1>
+      </div>
       <button>Share a fact</button>
     </header>
 
-    <form>
+    <form class="fact-form">
       <input
         type="text"
         placeholder="Share a fact with the world..." />
@@ -47,7 +64,7 @@
 
       <section>
         <ul>
-          <li>
+          <li class="fact">
             <p>
               React is being developed by Meta (formerly facebook)
               <a
@@ -55,7 +72,11 @@
                 target="_blank"
                 >(Source)</a
               >
-              <span>#technology#</span>
+              <span
+                class="tag"
+                style="background-color: #3b82f6"
+                >#technology#</span
+              >
             </p>
             <div>
               <button>👍 <strong>24</strong></button>
@@ -63,7 +84,7 @@
               <button>⛔️ 4</button>
             </div>
           </li>
-          <li>
+          <li class="fact">
             <p>
               Millennial dads spend 3 times as much time with their kids than
               their fathers spent with them. In 1982, 43% of fathers had never
@@ -73,7 +94,11 @@
                 target="_blank"
                 >(Source)</a
               >
-              <span>#society#</span>
+              <span
+                class="tag"
+                style="background-color: #eab308"
+                >#society#</span
+              >
             </p>
             <div>
               <button>👍 <strong>11</strong></button>
