--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <button>Post</button>
     </form>
 
-    <main>
+    <main class="main">
       <aside>
         <ul>
           <li><button>All</button></li>
@@ -72,13 +72,13 @@
                 target="_blank"
                 >(Source)</a
               >
-              <span
-                class="tag"
-                style="background-color: #3b82f6"
-                >#technology#</span
-              >
             </p>
-            <div>
+            <span
+              class="tag"
+              style="background-color: #3b82f6"
+              >#technology#</span
+            >
+            <div class="vote-buttons">
               <button>👍 <strong>24</strong></button>
               <button>🤯 9</button>
               <button>⛔️ 4</button>
@@ -94,13 +94,13 @@
                 target="_blank"
                 >(Source)</a
               >
-              <span
-                class="tag"
-                style="background-color: #eab308"
-                >#society#</span
-              >
             </p>
-            <div>
+            <span
+              class="tag"
+              style="background-color: #eab308"
+              >#society#</span
+            >
+            <div class="vote-buttons">
               <button>👍 <strong>11</strong></button>
               <button>🤯 2</button>
               <button>⛔️ 0</button>
