--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.gstatic.com"
       crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Coiny&family=Roboto&family=Sono:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Coiny&family=Roboto&family=Sono:wght@400;600&display=swap"
       rel="stylesheet" />
 
     <link
@@ -95,7 +95,7 @@
                 >#technology#</span
               >
               <div class="vote-buttons">
-                <button>👍 <strong>24</strong></button>
+                <button>👍 24</button>
                 <button>🤯 9</button>
                 <button>⛔️ 4</button>
               </div>
@@ -118,7 +118,7 @@
                 >#society#</span
               >
               <div class="vote-buttons">
-                <button>👍 <strong>11</strong></button>
+                <button>👍 11</button>
                 <button>🤯 2</button>
                 <button>⛔️ 0</button>
               </div>
