--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <span
                 class="tag"
                 style="background-color: #3b82f6"
-                >#technology#</span
+                >technology</span
               >
               <div class="vote-buttons">
                 <button>👍 24</button>
@@ -115,7 +115,7 @@
               <span
                 class="tag"
                 style="background-color: #eab308"
-                >#society#</span
+                >society</span
               >
               <div class="vote-buttons">
                 <button>👍 11</button>
