added event listener

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             width="68" />
           <h1>Today I Learned</h1>
         </div>
-        <button class="btn btn-large">Share a fact</button>
+        <button class="btn btn-large btn-open">Share a fact</button>
       </header>
 
-      <form class="fact-form">
+      <form class="fact-form hidden">
         <input
           type="text"
           placeholder="Share a fact with the world..." />
@@ -127,5 +127,7 @@
         </section>
       </main>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
